--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "nathantiel",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.4.0",
     "express": "^4.21.2",
     "mongoose": "^8.9.5"
   }
